--- a/Converter/Localize/Localizable.strings
+++ b/Converter/Localize/Localizable.strings
@@ -6,3 +6,6 @@
   
 */
 "home_nav" = "Home";
+"Ok" = "Ok";
+"SceneDelegate not available" = "SceneDelegate not available";
+"RootViewController not available" = "RootViewController not available";
