Dynamic button state binding

--- a/Converter/Localize/Localizable.strings
+++ b/Converter/Localize/Localizable.strings
@@ -10,3 +10,5 @@
 "Ok" = "Ok";
 "SceneDelegate not available" = "SceneDelegate not available";
 "RootViewController not available" = "RootViewController not available";
+"From" = "From";
+"To" = "To";
